default classes added

--- a/app/views/app/health_units/_health_unit.html.erb
+++ b/app/views/app/health_units/_health_unit.html.erb
@@ -20,8 +20,8 @@
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">Type:</strong>
-    <%= health_unit.type %>
+    <strong class="block font-medium mb-1">Category:</strong>
+    <%= health_unit.category %>
   </p>
 
   <p class="my-5">
@@ -31,7 +31,7 @@
 
   <% if action_name != "show" %>
     <%= link_to "Show this health unit", health_unit, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this health unit', edit_health_unit_path(health_unit), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Edit this health unit', edit_app_health_unit_path(health_unit), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
 </div>
