--- a/app/views/app/professionals/_professional.html.erb
+++ b/app/views/app/professionals/_professional.html.erb
@@ -16,7 +16,7 @@
 
   <% if action_name != "show" %>
     <%= link_to "Show this professional", professional, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this professional', edit_professional_path(professional), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Edit this professional', edit_app_professional_path(professional), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
 </div>
