--- a/app/views/app/workspaces/_workspace.html.erb
+++ b/app/views/app/workspaces/_workspace.html.erb
@@ -6,7 +6,7 @@
 
   <% if action_name != "show" %>
     <%= link_to "Show this workspace", workspace, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this workspace', edit_workspace_path(workspace), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Edit this workspace', edit_app_workspace_path(workspace), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
 </div>
