--- a/app/views/app/areas/_area.html.erb
+++ b/app/views/app/areas/_area.html.erb
@@ -6,7 +6,7 @@
 
   <% if action_name != "show" %>
     <%= link_to "Show this area", area, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this area', edit_area_path(area), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Edit this area', edit_app_area_path(area), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
 </div>
