--- a/app/views/app/health_insurances/_health_insurance.html.erb
+++ b/app/views/app/health_insurances/_health_insurance.html.erb
@@ -1,12 +1,7 @@
-<div id="<%= dom_id health_insurance %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Name:</strong>
-    <%= health_insurance.name %>
-  </p>
-
-  <% if action_name != "show" %>
-    <%= link_to "Show this health insurance", health_insurance, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this health insurance', edit_app_health_insurance_path(health_insurance), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
-    <hr class="mt-6">
-  <% end %>
-</div>
+<%= link_to health_insurance do  %>
+  <div id="<%= dom_id health_insurance %>" class="card ">
+    <p class="">
+      <strong class="block font-medium mb-1"> <%= health_insurance.name %></strong>
+    </p>
+  </div>
+<%end%>
