--- a/app/views/app/queues/edit.html.erb
+++ b/app/views/app/queues/edit.html.erb
@@ -1,8 +1,17 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing queue</h1>
+<% content_for :ctas_secondary do %>
+  <%= link_to app_queues_path, class: "btn-secondary-gray flex-none" do %>
+    <%= icon('fa-solid','arrow-left', class:'-mx-1')%>
+  <%end%>
 
+  <%= link_to app_queue_path(@app_queue), class: "btn-secondary flex-none" do %>
+    <%= icon('fa-solid','arrow-up-right-from-square', class:'-mx-1')%>
+  <%end%>
+<% end %>
+
+<% provide :head_title, "#{t('views.app.general.editing')} #{App::Queue.model_name.human}" %>
+<% provide :page_title, "#{t('views.app.general.editing')} #{App::Queue.model_name.human}" %>
+<% provide :entry_id, "#{@app_queue.id}" %>
+
+<% content_for :page_content do %>
   <%= render "form", app_queue: @app_queue %>
-
-  <%= link_to "Show this queue", @app_queue, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to queues", app_queues_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+<%end%>
