--- a/app/views/app/queues/new.html.erb
+++ b/app/views/app/queues/new.html.erb
@@ -1,7 +1,11 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New queue</h1>
+<% content_for :ctas_secondary do %>
+  <%= link_to app_queues_path, class: "btn-secondary-gray flex-none" do %>
+    <%= icon('fa-solid','arrow-left', class:'-mx-1')%>
+  <%end%>
+<% end %>
 
+<% provide :page_title, "#{t('views.app.general.new')} #{App::Queue.model_name.human}" %>
+
+<% content_for :page_content do %>
   <%= render "form", app_queue: @app_queue %>
-
-  <%= link_to 'Back to queues', app_queues_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+<%end%>
