--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,27 +2,72 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer components {
   /* BUTTONS  */
   .btn-primary {
     @apply 
     text-white 
-    bg-blue-700 hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 
-    focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800
+    bg-emerald-500 hover:bg-emerald-600 dark:bg-emerald-500 dark:hover:bg-emerald-600 
+    /* focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-emerald-600 */
     font-medium 
     rounded-lg 
-    px-5 
-    py-2.5 
-    text-center ;
+    px-4 
+    py-2 
+    text-sm 
+    text-center 
+    cursor-pointer;
   }
+
+  .btn-secondary {
+    @apply 
+    text-gray-500 dark:text-gray-400 hover:text-white dark:hover:text-white
+    bg-gray-100 hover:bg-emerald-600 dark:bg-gray-900 dark:hover:bg-emerald-600 
+    /* focus:ring-4 focus:outline-none focus:ring-gray-300 dark:focus:ring-gray-700 */
+    font-medium 
+    rounded-lg 
+    px-4 
+    py-2 
+    text-sm 
+    text-center 
+    cursor-pointer;
+  }
+
+  .btn-secondary-gray {
+    @apply 
+    text-gray-500 dark:text-gray-400
+    bg-gray-100 hover:bg-gray-200 dark:bg-gray-900 dark:hover:bg-gray-800 
+    /* focus:ring-4 focus:outline-none focus:ring-gray-300 dark:focus:ring-gray-700 */
+    font-medium 
+    rounded-lg 
+    px-4 
+    py-2 
+    text-sm 
+    text-center 
+    cursor-pointer;
+  }
+
+  .btn-delete {
+    @apply 
+    text-gray-500 dark:text-gray-400
+    hover:text-white dark:hover:text-white
+    bg-gray-100 hover:bg-red-700 dark:bg-gray-900 dark:hover:bg-red-700 
+    font-medium 
+    rounded-lg 
+    px-4 
+    py-2 
+    text-sm 
+    text-center 
+    cursor-pointer;
+  }
+
+
 
   .nav-link{
     @apply 
     block rounded-lg
     px-4 py-2 md:py-2 
     font-medium
-    md:hover:text-blue-600
+    md:hover:text-emerald-500
     md:hover:bg-gray-200;
   }
 
@@ -66,9 +111,365 @@
     mx-auto 
     my-12 md:my-20
     bg-gray-100 dark:bg-gray-700
-    border-0 rounded;
+    border-0 rounded-lg;
 
   }
 
+  /* APP STYLES */
+
+  .application{
+    @apply min-h-screen
+    text-sm xl:text-base 
+    text-gray-900 dark:text-white 
+    bg-white dark:bg-gray-800;
+  }
+
+  .btn-icon{
+    @apply -ml-1 pr-1;
+  }
+
+  .card {
+    @apply bg-gray-100 dark:bg-gray-900 rounded-lg p-4 space-y-1 relative;
+  }
+
+  .card-header{
+    @apply flex items-start justify-between gap-2;
+  }
+
+  .card-header-image{
+    @apply rounded-lg 
+    h-18 w-18
+    grid justify-center place-items-center
+    group-hover:bg-gray-50 group-hover:shadow-lg
+    dark:bg-gray-100 dark:group-hover:bg-gray-50 
+    
+    transition duration-300 group-hover:scale-105;
+  }
+
+  .card-header-info{
+    @apply flex-1 overflow-auto;
+  }
+
+  .card-header-animate {
+    @apply translate-y-1.5 group-hover:translate-y-0 transition duration-300;
+  }
+  
+  .card-header-title{
+    @apply font-medium hover:text-emerald-500 truncate;
+  }
+
+  .card-header-subtitle{
+    @apply  text-xs opacity-0 group-hover:opacity-100 duration-300;
+  }
+  .card-header-subtitle-animate{
+    @apply  -translate-y-full group-hover:translate-y-0 transition duration-300;
+  }
+
+  .card-header-btn{
+    @apply hover:bg-gray-200 dark:hover:bg-gray-800 px-3 py-2 text-sm rounded-lg;
+  }
+
+  .card-popover{
+    grid-template-columns: repeat(2, 1fr);
+    direction: rtl;
+    @apply rounded-lg
+    w-48 text-xs z-10 
+    absolute right-14 top-0
+    gap-1 p-2 shadow-lg
+    bg-gray-50 border 
+    dark:border-gray-600 dark:bg-gray-800
+    hidden
+    ;
+  }
+  .card-popover * {
+    direction: ltr;
+  }
+
+  .card-tag-active{
+    @apply font-medium w-full text-center text-white tracking-tight px-2.5 py-1 text-sm  bg-emerald-500 rounded-md;
+  }
+
+  .card-tag-inactive{
+    @apply font-medium w-full text-center text-red-600 tracking-tight px-2.5 py-1 text-sm bg-gray-200 dark:bg-gray-800 rounded-md;
+  }
+
+  .card-tag-readonly{
+    @apply font-medium w-full text-center  tracking-tight px-2.5 py-1 text-sm bg-gray-200 dark:bg-gray-800 rounded-md;
+  }
+
+  .card-tag-secondary{
+    @apply ;
+  }
+
+  .card-popover-btn-primary {
+    @apply rounded-md 
+    flex items-center justify-start
+    py-2 px-4 
+    hover:bg-emerald-500 dark:hover:bg-emerald-500
+    hover:text-white;
+  }
+
+  
+
+  .card-popover-btn-delete{
+    @apply  rounded-md
+    flex items-center justify-start
+    py-2 px-4 
+    hover:bg-red-600 dark:hover:bg-red-600
+    hover:text-white;
+  }
+
+
+
+
+  .form-input{
+    @apply block rounded-md 
+    bg-white dark:bg-gray-900
+    border border-gray-200 outline-none
+    dark:border dark:border-gray-600
+    h-10 px-3 py-2 mt-2 w-full 
+    disabled:bg-gray-100 disabled:border-none disabled:placeholder:text-red-300
+    text-base;
+  }
+
+  .form-input-icon{
+    @apply absolute inset-y-0 left-0 px-3 flex items-center pointer-events-none;
+  }
+
+  .detail-input-icon{
+    @apply absolute inset-y-0 left-0 px-3 flex items-center hover:text-emerald-500;
+  }
+
+  .search-input-icon{
+    @apply absolute inset-y-1 right-0 mx-2 p-2
+    flex items-center cursor-pointer
+    bg-gray-200 dark:bg-gray-800 hover:bg-emerald-600 dark:hover:bg-emerald-600
+    text-gray-400 hover:text-white dark:hover:text-white rounded-md;
+  }
+
+  .detail-input-icon-disabled{
+    @apply absolute inset-y-0 left-0 px-3 flex items-center ;
+  }
+
+  .pagination-bar{
+    @apply w-full flex justify-between items-center h-10 
+    bg-gray-100 dark:bg-gray-900
+    p-4 rounded-lg my-4;
+  }
+
+  .pagination-btn{
+    @apply px-2.5 py-1 rounded-md 
+    bg-gray-200 dark:bg-gray-700
+    hover:bg-emerald-500 hover:text-white
+    dark:hover:bg-emerald-500 dark:hover:text-white
+    ;
+  }
+
+  .pagination-btn-active{
+    
+    @apply px-2.5 py-1 rounded-md 
+    bg-emerald-500 dark:bg-emerald-500 text-white
+    ;
+  }
+
+  .pagination-btn-disabled{
+    @apply px-2.5 py-1 rounded-md 
+    bg-gray-200 dark:bg-gray-700
+    text-gray-400 dark:text-gray-600
+    
+    ;
+  }
+
+  .detail-input{
+    @apply block rounded-md 
+    bg-gray-100 dark:bg-gray-900
+    border-none outline-none
+    dark:border-none  
+    h-10 px-3 py-2 mt-2 w-full
+    overflow-x-scroll scrollbar-hide
+    text-base;
+  }
+
+  .search-input{
+    @apply block rounded-md 
+    bg-gray-100 dark:bg-gray-900
+    border-none outline-none
+    dark:border-none  
+    h-10 pl-3 pr-12 py-2 mt-2 w-full
+    overflow-x-scroll scrollbar-hide
+    text-base;
+  }
+
+  .with-icon{
+    @apply pl-10;
+  }
+
+  .default-grid{
+    @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 2xl:grid-cols-4 gap-4 my-4;
+  }
+
+  .horizontal-grid{
+    @apply grid grid-flow-col auto-cols-max space-x-4;
+  }
+
+  .horizontal-grid-item{
+    @apply w-[calc(100vw-2rem)] md:w-[calc((100vw-3rem)/2)] lg:w-[calc((100vw-4rem)/3)] xl:w-[calc((100vw-35rem)/2)] 2xl:w-[calc((100vw-37rem)/4)];
+  }
+
+  .sticky-1{
+    @apply sticky top-28  xl:top-16 z-20
+    bg-white dark:bg-gray-800 py-2 ;
+  }
+  
+  .sticky-2{
+    @apply sticky top-42  xl:top-28 z-10
+    bg-white dark:bg-gray-800 py-2 ;
+  }
+
+  .sticky-3{
+    @apply sticky top-54  xl:top-40 z-10
+    bg-white dark:bg-gray-800 py-2 ;
+  }
+
+
+  .form-checkbox-simple {
+    @apply 
+    h-6 w-6 
+    focus:ring-white
+    focus:outline-none focus:ring-0 focus:ring-offset-0
+    bg-gray-100               dark:bg-gray-900 
+    focus:border-none 
+    border-none 
+    rounded-lg cursor-pointer 
+    ;
+  }
+
+  .form-radio-simple {
+    @apply 
+    h-5 w-5 
+    focus:ring-white
+    focus:outline-none focus:ring-0 focus:ring-offset-0
+    bg-gray-200               dark:bg-gray-800 
+    focus:border-none 
+    border-none 
+    rounded-full cursor-pointer 
+    ;
+  }
+
+
+  .form-checkbox{
+    background-size: 1.5rem !important;
+    /* @apply block rounded-md bg-gray-100 dark:bg-gray-900
+    mt-2 h-10 w-10 
+    ; */
+    
+    @apply h-10 w-10 px-3 py-2 mt-2  
+    focus:outline-none dark:focus:ring-offset-0 
+   
+    bg-white dark:bg-gray-800
+
+
+    border border-gray-200 outline-none
+    dark:border dark:border-gray-600
+
+    
+    inline-flex items-center justify-between 
+    rounded-lg cursor-pointer 
+    peer-checked:border-none 
+    peer-checked:bg-emerald-500   dark:peer-checked:bg-emerald-500
+    ;
+  }
+
+  .form-input-file{
+    @apply block rounded-md 
+    bg-white dark:bg-gray-900
+    border border-gray-200 
+    dark:border dark:border-gray-600
+    hover:bg-gray-100 dark:hover:bg-gray-950
+    h-10 px-3 py-2 mt-2 w-full 
+    text-base
+    cursor-pointer
+    ;
+    }
+
+  .peer-text {
+    pointer-events: none !important;
+    @apply text-center -mt-8 cursor-pointer
+    text-red-600             dark:text-red-600 
+    peer-checked:text-white    dark:peer-checked:text-white
+    ;
+  }
+
+  .required{
+    @apply after:content-['*'] after:ml-0.5 after:text-red-600;
+  }
+
+  .sidebar-link{
+    @apply block p-2  
+    
+    text-sm rounded-lg  
+    text-gray-900 dark:text-slate-400
+    hover:text-emerald-500 dark:hover:text-white
+    hover:bg-gray-200 dark:hover:bg-gray-950;
+  }
+
+  .sidebar-link-active{
+    @apply block p-2
+      
+    text-sm rounded-lg  
+    text-white dark:text-white
+    bg-emerald-500 dark:bg-emerald-500
+    hover:bg-emerald-600 dark:hover:bg-emerald-600;
+  }
+
+  .dropdown-toggle[aria-expanded="true"] {
+    @apply text-emerald-500
+  }
+  
+
 }
+
+/* DROPDOWN MENU TOGGLE */
+
+
+[aria-expanded="true"] .fa-chevron-down {
+  display: none;
+}
+
+[aria-expanded="false"] .fa-chevron-down {
+  display: block;
+}
+
+[aria-expanded="true"] .fa-chevron-up {
+  display: block;
+}
+
+[aria-expanded="false"] .fa-chevron-up {
+  display: none;
+}
+
+/* REMOVE SCROLL BAR FROM _SIDEBAR */
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Change the white to any color */
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px rgb(229 231 235) inset !important;
+}
+
+
+@media (prefers-color-scheme: dark) {
+  .dark ::-ms-reveal {
+    filter: invert(100%);
+  }
+}
+
 
