--- a/app/views/app/health_insurances/edit.html.erb
+++ b/app/views/app/health_insurances/edit.html.erb
@@ -1,8 +1,17 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing health insurance</h1>
+<% content_for :ctas_secondary do %>
+  <%= link_to app_health_insurances_path, class: "btn-secondary-gray flex-none" do %>
+    <%= icon('fa-solid','arrow-left', class:'-mx-1')%>
+  <%end%>
 
+  <%= link_to app_health_insurance_path(@app_health_insurance), class: "btn-secondary flex-none" do %>
+    <%= icon('fa-solid','arrow-up-right-from-square', class:'-mx-1')%>
+  <%end%>
+<% end %>
+
+<% provide :head_title, "#{t('views.app.general.editing')} #{App::HealthInsurance.model_name.human}" %>
+<% provide :page_title, "#{t('views.app.general.editing')} #{App::HealthInsurance.model_name.human}" %>
+<% provide :entry_id, "#{@app_health_insurance.id}" %>
+
+<% content_for :page_content do %>
   <%= render "form", app_health_insurance: @app_health_insurance %>
-
-  <%= link_to "Show this health insurance", @app_health_insurance, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to health insurances", app_health_insurances_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+<%end%>
