--- a/app/views/app/health_units/_form.html.erb
+++ b/app/views/app/health_units/_form.html.erb
@@ -11,37 +11,36 @@
     </div>
   <% end %>
 
-  <div class="my-5">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+    <div class="">
+      <%= form.label :name %>
+      <%= form.text_field :name, class: "form-input" %>
+    </div>
+
+    <div class="">
+      <%= form.label :city %>
+      <%= form.text_field :city, class: "form-input" %>
+    </div>
+
+    <div class="">
+      <%= form.label :address %>
+      <%= form.text_field :address, class: "form-input" %>
+    </div>
+
+    <div class="">
+      <%= form.label :phone %>
+      <%= form.text_field :phone, class: "form-input" %>
+    </div>
+
+    <div class="">
+      <%= form.label :category %>
+      <%= form.collection_select :category, @categories, :to_s, :to_s, {}, {class: "form-input"} %>
+    </div>
+
   </div>
 
-  <div class="my-5">
-    <%= form.label :city %>
-    <%= form.text_field :city, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  <div class="mt-4 inline-flex w-full justify-end">
+    <%= form.submit class: "btn-primary" %>
   </div>
 
-  <div class="my-5">
-    <%= form.label :address %>
-    <%= form.text_field :address, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :phone %>
-    <%= form.text_field :phone, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :category %>
-    <%= form.text_field :category, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :token %>
-    <%= form.text_field :token, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
-  </div>
 <% end %>
