--- a/app/views/app/health_units/index.html.erb
+++ b/app/views/app/health_units/index.html.erb
@@ -1,14 +1,16 @@
-<div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+<% content_for :ctas_primary do %>
+  <%= link_to new_app_health_unit_path, class: "btn-primary flex-none" do %>
+    <%= icon('fa-solid','plus',class:'btn-icon') %>
+    <%= App::HealthUnit.model_name.human %>
   <% end %>
+<% end %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Health units</h1>
-    <%= link_to 'New health unit', new_app_health_unit_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
-  </div>
+<% provide :head_title, App::HealthUnit.model_name.human(count:2) %>
+<% provide :page_title, App::HealthUnit.model_name.human(count:2) %>
 
-  <div id="app_health_units" class="min-w-full">
-    <%= render @app_health_units %>
-  </div>
+<% content_for :page_content do %>
+<div class="default-grid">
+  <%= render @app_health_units %>
 </div>
+
+<%end%>
