--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,53 @@
   </head>
 
   <body>
-    <main class="">
-      <%= yield %>
+     <body class='application scrollbar-hide '>
+    <main class=" " >
+      <%= render partial: 'layouts/app_notification' %>
+      <%= render partial: 'app/shared/sidebar' %>
+
+      <%# RIGHT SIDEBAR %>
+      <aside id="sidebar-multi-level-sidebar-b" class=" fixed top-0 right-0 z-40 h-screen overflow-y-auto transition-transform translate-x-full xl:translate-x-0 bg-white w-64 dark:bg-gray-800"  aria-label="Sidebar">
+        <div class="h-full px-3 overflow-y-auto scrollbar-hide space-y-1 py-4 ">
+
+          <%= yield :sidebar %>
+        </div>
+      </aside>
+      <%# END SECOND SIDEBAR%>
+
+      <div class="px-4 xl:mx-64 ">
+
+        <% if has_ctas? %>
+          <div class="py-2 sticky top-0 pt-14 xl:pt-4 z-20 bg-white dark:bg-gray-800 ">
+
+            <div class="bg-gray-100 dark:bg-gray-900 rounded-lg p-1.5 flex justify-between scrollbar-hide overflow-x-scroll space-x-2">
+              <div class="flex-none grid grid-flow-col auto-cols-max gap-x-2 ">
+                <%= yield :ctas_secondary %>
+              </div>
+              <div class="flex-none grid grid-flow-col auto-cols-max gap-x-2 scrollbar-hide overflow-x-scroll">
+                <%= yield :ctas_primary %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+
+        <div class="sticky top-10 z-10 mb-4 ">
+
+          <% if content_for(:page_title)%>
+            <div class="hidden xl:flex items-end justify-between">
+
+              <p class="font-bold text-2xl my-2"> <%= yield :page_title %> </p>
+
+              <% if content_for(:entry_id) %>
+                <p class="description font-medium"> <%=icon('fa-solid','hashtag', class:'fa-sm')%> <%= yield :entry_id %></p>
+              <% end %>
+            </div>
+          <% end %>
+
+          <%= yield :page_content %>
+        </div>
+      </div>
+
     </main>
   </body>
 </html>
