--- a/app/views/app/queues/_detail.html.erb
+++ b/app/views/app/queues/_detail.html.erb
@@ -1,22 +1,22 @@
 <div class="space-y-4">
 
-  <div class="">
-    <p class=""><%= App::HealthUnit.model_name.human%></p>
-    <p class="detail-input"><%= app_queue.health_unit.name  %></p>
-  </div>
-
-  <% %i[category].each do |attr| %>
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
     <div class="">
-      <p class=""><%= App::Queue.human_attribute_name(attr)%></p>
-      <p class="detail-input"><%= app_queue[attr]  %></p>
+      <p class=""><%= App::HealthUnit.model_name.human%></p>
+      <p class="detail-input"><%= app_queue.health_unit.name  %></p>
     </div>
-  <%end%>
+
+    <div class="">
+      <p class=""><%= App::Queue.human_attribute_name('category')%></p>
+      <p class="detail-input"><%= t("constants.app/queue.#{app_queue.category}") %></p>
+    </div>
+  </div>
 
   <% if app_queue.users.any? %>
     <div class="">
       <p class="font-bold text-2xl"> <%= App::User.model_name.human %> </p>
       <div class="mt-2 default-grid">
-        <%= render app_queue.users %>
+        <%= render partial: 'app/users/users', locals: { app_users: app_queue.users} %>
       </div>
     </div>
   <% end %>
