--- a/app/views/app/queues/new.html.erb
+++ b/app/views/app/queues/new.html.erb
@@ -1,11 +1,15 @@
-<% content_for :ctas_secondary do %>
-  <%= link_to app_queues_path, class: "btn-secondary-gray flex-none" do %>
-    <%= icon('fa-solid','arrow-left', class:'-mx-1')%>
+<% if false %>
+
+  <% content_for :ctas_secondary do %>
+    <%= link_to app_queues_path, class: "btn-secondary-gray flex-none" do %>
+      <%= icon('fa-solid','arrow-left', class:'-mx-1')%>
+    <%end%>
+  <% end %>
+
+  <% provide :page_title, "#{t('views.app.general.new')} #{App::Queue.model_name.human}" %>
+
+  <% content_for :page_content do %>
+    <%= render "form", app_queue: @app_queue %>
   <%end%>
+
 <% end %>
-
-<% provide :page_title, "#{t('views.app.general.new')} #{App::Queue.model_name.human}" %>
-
-<% content_for :page_content do %>
-  <%= render "form", app_queue: @app_queue %>
-<%end%>
