--- a/app/views/app/health_units/_detail.html.erb
+++ b/app/views/app/health_units/_detail.html.erb
@@ -1,16 +1,18 @@
 <div class="space-y-4">
 
-  <% %i[name city address phone category token].each do |attr| %>
-    <div class="">
-      <p class=""><%= App::HealthUnit.human_attribute_name(attr)%></p>
-      <p class="detail-input"><%= app_health_unit[attr]  %></p>
-    </div>
-  <%end%>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+    <% %i[name city address phone category token].each do |attr| %>
+      <div class="">
+        <p class=""><%= App::HealthUnit.human_attribute_name(attr)%></p>
+        <p class="detail-input"><%= app_health_unit[attr]  %></p>
+      </div>
+    <%end%>
+  </div>
 
   <% if app_health_unit.queues.any? %>
     <div class="">
-      <p class="font-bold text-2xl"> <%= App::Queue.model_name.human %> </p>
-      <div class="mt-2 default-grid">
+      <p class="font-bold text-2xl"> <%= App::Queue.model_name.human(count:2) %> </p>
+      <div class="default-grid">
         <%= render app_health_unit.queues %>
       </div>
     </div>
