--- a/app/views/app/queues/edit.html.erb
+++ b/app/views/app/queues/edit.html.erb
@@ -1,17 +1,21 @@
-<% content_for :ctas_secondary do %>
-  <%= link_to app_queues_path, class: "btn-secondary-gray flex-none" do %>
-    <%= icon('fa-solid','arrow-left', class:'-mx-1')%>
+<% if false %>
+
+  <% content_for :ctas_secondary do %>
+    <%= link_to app_queues_path, class: "btn-secondary-gray flex-none" do %>
+      <%= icon('fa-solid','arrow-left', class:'-mx-1')%>
+    <%end%>
+
+    <%= link_to app_queue_path(@app_queue), class: "btn-secondary flex-none" do %>
+      <%= icon('fa-solid','arrow-up-right-from-square', class:'-mx-1')%>
+    <%end%>
+  <% end %>
+
+  <% provide :head_title, "#{t('views.app.general.editing')} #{App::Queue.model_name.human}" %>
+  <% provide :page_title, "#{t('views.app.general.editing')} #{App::Queue.model_name.human}" %>
+  <% provide :entry_id, "#{@app_queue.id}" %>
+
+  <% content_for :page_content do %>
+    <%= render "form", app_queue: @app_queue %>
   <%end%>
 
-  <%= link_to app_queue_path(@app_queue), class: "btn-secondary flex-none" do %>
-    <%= icon('fa-solid','arrow-up-right-from-square', class:'-mx-1')%>
-  <%end%>
 <% end %>
-
-<% provide :head_title, "#{t('views.app.general.editing')} #{App::Queue.model_name.human}" %>
-<% provide :page_title, "#{t('views.app.general.editing')} #{App::Queue.model_name.human}" %>
-<% provide :entry_id, "#{@app_queue.id}" %>
-
-<% content_for :page_content do %>
-  <%= render "form", app_queue: @app_queue %>
-<%end%>
