--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -7,9 +7,13 @@
 
 <hr>
 
+<% if false %>
+  
 <%= render partial: 'site/sections/services' %>
-
 <hr>
+
+<% end %>
+
 
 <%= render partial: 'site/sections/faq' %>
 
