--- a/app/views/site/sections/_about.html.erb
+++ b/app/views/site/sections/_about.html.erb
@@ -20,7 +20,7 @@
 
   </div>
 
-  <a data-aos="zoom-in" data-aos-delay="50" data-aos-anchor=".about_aos_trigger" data-aos-mirror="false"  href="#services"  data-controller="scroll-to" data-scroll-to-offset-value="110"  class="hidden lg:inline-flex items-center space-x-2">
+  <a data-aos="zoom-in" data-aos-delay="50" data-aos-anchor=".about_aos_trigger" data-aos-mirror="false"  href="#faq"  data-controller="scroll-to" data-scroll-to-offset-value="110"  class="hidden lg:inline-flex items-center space-x-2">
       <span class=""><%= icon('fa-solid', 'arrow-down', class:"fa-bounce ", style:"--fa-bounce-height: 3px") %></span>
       <span class=""><%= t('views.site.about.cta') %></span>
   </a>
