--- a/app/views/app/queues/_detail.html.erb
+++ b/app/views/app/queues/_detail.html.erb
@@ -13,11 +13,9 @@
   </div>
 
   <% if app_queue.users.any? %>
-    <div class="">
+    <div class="space-y-4">
       <p class="font-bold text-2xl"> <%= App::User.model_name.human %> </p>
-      <div class="mt-2 default-grid">
-        <%= render partial: 'app/users/users', locals: { app_users: app_queue.users} %>
-      </div>
+      <%= render partial: 'app/users/users', locals: { app_users: app_queue.users} %>
     </div>
   <% end %>
 
