--- a/app/views/site/sections/_contact.html.erb
+++ b/app/views/site/sections/_contact.html.erb
@@ -9,18 +9,18 @@
     <%= form_with(model: contact_form, data: { aos:'zoom-in', aos_delay:'500' }, class: "my-10 space-y-8 max-w-screen-md mx-auto") do |form| %>
         <div>
           <%= form.label :email ,class:'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
-          <%= form.text_field :email, placeholder: t('views.site.contact.email_placeholder'), class: "shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" %>
+          <%= form.text_field :email, placeholder: t('views.site.contact.email_placeholder'), class: "shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-emerald-500 focus:border-emerald-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-emerald-500 dark:focus:border-emerald-500 dark:shadow-sm-light" %>
         </div>
         <div>
           <%= form.label :subject ,class:'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
-          <%= form.text_field :subject, placeholder: t('views.site.contact.subject_placeholder'), class: "block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light", data: { contact_target: "subject" } %>
+          <%= form.text_field :subject, placeholder: t('views.site.contact.subject_placeholder'), class: "block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-emerald-500 focus:border-emerald-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-emerald-500 dark:focus:border-emerald-500 dark:shadow-sm-light", data: { contact_target: "subject" } %>
         </div>
         <div class="sm:col-span-2">
           <%= form.label :message, class:'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400' %>
-          <%= form.text_area :message, rows:6, placeholder: t('views.site.contact.message_placeholder'), class: "block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", data: { contact_target: "message" }, controller: "textarea-autogrow" %>
+          <%= form.text_area :message, rows:6, placeholder: t('views.site.contact.message_placeholder'), class: "block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-emerald-500 focus:border-emerald-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-emerald-500 dark:focus:border-emerald-500", data: { contact_target: "message" }, controller: "textarea-autogrow" %>
         </div>
         <div class=" text-center">
-          <%= form.submit t('views.site.contact.cta'), data: { action: 'navigation#scrollToContact' }, class: "py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-blue-700 sm:w-fit hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 cursor-pointer" %>
+          <%= form.submit t('views.site.contact.cta'), data: { action: 'navigation#scrollToContact' }, class: "py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-emerald-700 sm:w-fit hover:bg-emerald-800 focus:ring-4 focus:outline-none focus:ring-emerald-300 dark:bg-emerald-600 dark:hover:bg-emerald-700 dark:focus:ring-emerald-800 cursor-pointer" %>
         </div>
     <% end %>
 
