--- a/app/views/app/shared/_sidebar.html.erb
+++ b/app/views/app/shared/_sidebar.html.erb
@@ -61,7 +61,7 @@
       <%end%>
 
     
-      <%= link_to '#', class:"sidebar-link#{is_link_active?('api')}" do %>
+      <%= link_to app_integrations_path, class:"sidebar-link#{is_link_active?('api')}" do %>
         <%= icon('fa-solid','cube', class:"mr-1")%>
         API
       <%end%>
